RESOLVED FIXED231232
[JSC][32bit] Fix bugs after unlinked baseline jit
https://bugs.webkit.org/show_bug.cgi?id=231232
Summary [JSC][32bit] Fix bugs after unlinked baseline jit
Xan Lopez
Reported 2021-10-05 07:34:16 PDT
We are doing the simplest thing now, which is to not use DataIC on baseline JIT for 32bit. This should be doable now, so we'll get on that after this lands.
Attachments
v1 (12.62 KB, patch)
2021-10-05 07:48 PDT, Xan Lopez
no flags
Xan Lopez
Comment 1 2021-10-05 07:48:13 PDT
Created attachment 440212 [details] v1 See what EWS thinks.
Yusuke Suzuki
Comment 2 2021-10-05 10:28:54 PDT
Comment on attachment 440212 [details] v1 r=me
EWS
Comment 3 2021-10-05 10:51:53 PDT
Committed r283557 (242522@main): <https://commits.webkit.org/242522@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 440212 [details].
Radar WebKit Bug Importer
Comment 4 2021-10-05 10:52:17 PDT
Note You need to log in before you can comment on or make changes to this bug.