Source/JavaScriptCore/jit/JITCode.h
@@ -162,8 +162,12 @@ public:
 
     static bool useDataIC(JITType jitType)
     {
+#if USE(JSVALUE64)
         if (JITCode::isBaselineCode(jitType))
             return true;
+#else
+        UNUSED_PARAM(jitType);
+#endif
         if (!Options::useDataIC())
             return false;
         return Options::useDataICInOptimizingJIT();
